; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_CheckCGATS_Overflow.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_CheckCGATS_Overflow.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [19 x i8] c"@\0AA 1.e2147483648\0A\00", align 1
@__const.CheckCGATS_Overflow.junk = private unnamed_addr constant [1 x i8*] [i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i32 0, i32 0)], align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @CheckCGATS_Overflow to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @CheckCGATS_Overflow() #0 {
  %1 = alloca i64, align 8
  %2 = alloca [1 x i8*], align 8
  %3 = bitcast [1 x i8*]* %2 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %3, i8* align 8 bitcast ([1 x i8*]* @__const.CheckCGATS_Overflow.junk to i8*), i64 8, i1 false)
  %4 = getelementptr inbounds [1 x i8*], [1 x i8*]* %2, i64 0, i64 0
  %5 = bitcast i8** %4 to i8*
  %6 = call i64 @cmsIT8LoadFromMem(i32 0, i8* %5, i32 8)
  store i64 %6, i64* %1, align 8
  %7 = load i64, i64* %1, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %13

9:                                                ; preds = %0
  %10 = call i32 (...) @DbgThread()
  %11 = load i64, i64* %1, align 8
  %12 = call i32 @cmsIT8Free(i32 %10, i64 %11)
  br label %13

13:                                               ; preds = %9, %0
  ret i32 1
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i64 @cmsIT8LoadFromMem(i32, i8*, i32) #2

declare dso_local i32 @cmsIT8Free(i32, i64) #2

declare dso_local i32 @DbgThread(...) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
